# kommit

./: Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: release.yml
kommit/: Cargo.toml
kommit/src/: cli.rs  config.rs  git.rs  main.rs  prompt.rs  provider.rs
kommit/src/provider/: lmstudio.rs  ollama.rs
lms-api/: Cargo.toml
lms-api/src/: chat.rs  error.rs  lib.rs  models.rs  types.rs
lms-api/src/chat/: stream.rs
lms-api/src/models/: download.rs  download_status.rs  load.rs  types.rs  unload.rs
lms-api/tests/: integration.rs
ollama-api/: Cargo.toml
ollama-commit-message/: Cargo.toml
ollama-commit-message/src/: cli.rs  git.rs  main.rs  ollama.rs  prompt.rs
