[package]
name = "kommit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3"
lms-api = { version = "0.1", path = "../lms-api" }
ollama-rs = { version = "0.3", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
