[package]
name = "lms-api"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
