[package]
name = "lms-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = { version = "0.3", optional = true }
derive_builder = "0.20.2"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
mockito = "1.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
stream = ["tokio", "tokio-stream", "async-stream", "reqwest/stream"]
